--- a/kongee/controlplane.yml
+++ b/kongee/controlplane.yml
@@ -83,9 +83,9 @@ env:
 
   vitals: on
   admin_gui_protocol: http
-  admin_gui_host: "a01a07367b87d43dbb34759a35e47884-0c3e5cc22f034f71.elb.us-east-1.amazonaws.com"
-  admin_gui_url: "http://a01a07367b87d43dbb34759a35e47884-0c3e5cc22f034f71.elb.us-east-1.amazonaws.com:8001"
-  admin_api_uri: "http://a174254b8e5d24f96885d4ab2be3f1bf-ec1b763ed592998c.elb.us-east-1.amazonaws.com:8002"
+  admin_gui_host: "a174254b8e5d24f96885d4ab2be3f1bf-ec1b763ed592998c.elb.us-east-1.amazonaws.com"
+  admin_gui_url: "http://a174254b8e5d24f96885d4ab2be3f1bf-ec1b763ed592998c.elb.us-east-1.amazonaws.com:8002"
+  admin_api_uri: "http://a01a07367b87d43dbb34759a35e47884-0c3e5cc22f034f71.elb.us-east-1.amazonaws.com:8001"
   admin_ssl_cert: /etc/secrets/kong-tls/tls.crt
   admin_ssl_cert_key: /etc/secrets/kong-tls/tls.key
   admin_gui_ssl_cert: /etc/secrets/kong-tls/tls.crt
@@ -193,7 +193,7 @@ admin:
     service.beta.kubernetes.io/aws-load-balancer-internal: "true"
     service.beta.kubernetes.io/aws-load-balancer-type: nlb
   tls:
-    enabled: false
+    enabled: true
     parameters:
     - http2
   http:
@@ -219,12 +219,12 @@ manager:
   http:
     enabled: true
   tls:
-    enabled: false
+    enabled: true
     parameters:
     - http2
   ingress:
     enabled: false
-    hostname: a01a07367b87d43dbb34759a35e47884-0c3e5cc22f034f71.elb.us-east-1.amazonaws.com
+    hostname:  174254b8e5d24f96885d4ab2be3f1bf-ec1b763ed592998c.elb.us-east-1.amazonaws.com
     annotations: {}
     tls: kong-tls
     path: /
