--- a/kongee/controlplane.yml
+++ b/kongee/controlplane.yml
@@ -188,7 +188,7 @@ admin:
     service.beta.kubernetes.io/aws-load-balancer-name: "manager"
     service.beta.kubernetes.io/aws-load-balancer-subnets: "subnet-0a4c44c677c2ea74c,subnet-07579767f7d37f425"
     service.beta.kubernetes.io/aws-load-balancer-type: nlb
-   #service.beta.kubernetes.io/aws-load-balancer-internal: "true"
+   #service.beta.kubernetes.io/aws-load-balancer-internal: "true" # < source of issue
     service.beta.kubernetes.io/aws-load-balancer-backend-protocol: tcp
     service.beta.kubernetes.io/aws-load-balancer-scheme: "internet-facing"
     external-dns.alpha.kubernetes.io/hostname: manager.kong.hbfs.io
@@ -216,7 +216,7 @@ manager:
     service.beta.kubernetes.io/aws-load-balancer-name: "manager"
     service.beta.kubernetes.io/aws-load-balancer-subnets: "subnet-0a4c44c677c2ea74c,subnet-07579767f7d37f425"
     service.beta.kubernetes.io/aws-load-balancer-type: nlb
-   #service.beta.kubernetes.io/aws-load-balancer-internal: "true"
+   #service.beta.kubernetes.io/aws-load-balancer-internal: "true" # < source of issue
     service.beta.kubernetes.io/aws-load-balancer-backend-protocol: tcp
     service.beta.kubernetes.io/aws-load-balancer-scheme: "internet-facing"
     external-dns.alpha.kubernetes.io/hostname: manager.kong.hbfs.io
