--- a/kongee/controlplane.yml
+++ b/kongee/controlplane.yml
@@ -83,8 +83,8 @@ env:
 
   vitals: on
   admin_gui_protocol: https
-  admin_gui_url: "https://manager.kong.hbfs.io:8445"
-  admin_api_uri: "https://admin.kong.hbfs.io:8444"
+  admin_gui_url: "https://manager.kong.hbfs.io"
+  admin_api_uri: "https://kong.hbfs.io"
   admin_ssl_cert: /etc/secrets/kong-tls/tls.crt
   admin_ssl_cert_key: /etc/secrets/kong-tls/tls.key
   admin_gui_ssl_cert: /etc/secrets/kong-tls/tls.crt
@@ -182,45 +182,53 @@ migrations:
 
 admin:
   enabled: true
-  type: LoadBalancer
-  annotations:
-    service.beta.kubernetes.io/aws-load-balancer-proxy-protocol: "*"
-    service.beta.kubernetes.io/aws-load-balancer-name: "manager"
-    service.beta.kubernetes.io/aws-load-balancer-subnets: "subnet-0a4c44c677c2ea74c,subnet-07579767f7d37f425"
-    service.beta.kubernetes.io/aws-load-balancer-type: nlb
-   #service.beta.kubernetes.io/aws-load-balancer-internal: "true" # < source of issue
-    service.beta.kubernetes.io/aws-load-balancer-backend-protocol: tcp
-    service.beta.kubernetes.io/aws-load-balancer-scheme: "internet-facing"
-    external-dns.alpha.kubernetes.io/hostname: manager.kong.hbfs.io
-    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: "ip"
+  type: NodePort
+  annotations: {}
+   #service.beta.kubernetes.io/aws-load-balancer-proxy-protocol: "*"
+   #service.beta.kubernetes.io/aws-load-balancer-name: "manager"
+   #service.beta.kubernetes.io/aws-load-balancer-subnets: "subnet-0a4c44c677c2ea74c,subnet-07579767f7d37f425"
+   #service.beta.kubernetes.io/aws-load-balancer-type: nlb
+   #service.beta.kubernetes.io/aws-load-balancer-backend-protocol: tcp
+   #service.beta.kubernetes.io/aws-load-balancer-scheme: "internet-facing"
+   #service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: "ip"
   tls:
     enabled: true
-    servicePort: 8444
     containerPort: 8444
+    servicePort: 8444
     parameters:
     - http2
   http:
     enabled: false
   ingress:
-    enabled: false
-    path: /api
-    hostname: ""
+    enabled: true
+    path: /*
+    hostname: "kong.hbfs.io"
     tls: kong-tls
-    annotations: {}
+    annotations:
+      kubernetes.io/ingress.class: alb
+      alb.ingress.kubernetes.io/scheme: internet-facing
+      alb.ingress.kubernetes.io/target-type: ip
+      alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
+      alb.ingress.kubernetes.io/certificate-arn: "arn:aws:acm:us-east-1:151743893450:certificate/fd19fa1d-6277-4aa0-81ce-773dff9e9c4c"
+      alb.ingress.kubernetes.io/healthcheck-protocol: "HTTPS"
+      alb.ingress.kubernetes.io/backend-protocol: "HTTPS"
+      alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
+      alb.ingress.kubernetes.io/tags: "konger=usrbinkat,eol=2021sept25"
+      external-dns.alpha.kubernetes.io/hostname: "kong.hbfs.io"
+      alb.ingress.kubernetes.io/load-balancer-name: "controlplane-api"
+
 
 manager:
   enabled: true
-  type: LoadBalancer
-  annotations:
-    service.beta.kubernetes.io/aws-load-balancer-proxy-protocol: "*"
-    service.beta.kubernetes.io/aws-load-balancer-name: "manager"
-    service.beta.kubernetes.io/aws-load-balancer-subnets: "subnet-0a4c44c677c2ea74c,subnet-07579767f7d37f425"
-    service.beta.kubernetes.io/aws-load-balancer-type: nlb
-   #service.beta.kubernetes.io/aws-load-balancer-internal: "true" # < source of issue
-    service.beta.kubernetes.io/aws-load-balancer-backend-protocol: tcp
-    service.beta.kubernetes.io/aws-load-balancer-scheme: "internet-facing"
-    external-dns.alpha.kubernetes.io/hostname: manager.kong.hbfs.io
-    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: "ip"
+  type: NodePort
+  annotations: {}
+   #service.beta.kubernetes.io/aws-load-balancer-proxy-protocol: "*"
+   #service.beta.kubernetes.io/aws-load-balancer-name: "manager"
+   #service.beta.kubernetes.io/aws-load-balancer-subnets: "subnet-0a4c44c677c2ea74c,subnet-07579767f7d37f425"
+   #service.beta.kubernetes.io/aws-load-balancer-type: nlb
+   #service.beta.kubernetes.io/aws-load-balancer-backend-protocol: tcp
+   #service.beta.kubernetes.io/aws-load-balancer-scheme: "internet-facing"
+   #service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: "ip"
   tls:
     enabled: true
     containerPort: 8445
@@ -230,11 +238,22 @@ manager:
   http:
     enabled: false
   ingress:
-    enabled: false
-    hostname: ""
-    annotations: {}
+    enabled: true
+    hostname: "manager.kong.hbfs.io"
     tls: kong-tls
-    path: /
+    path: /*
+    annotations:
+      kubernetes.io/ingress.class: alb
+      alb.ingress.kubernetes.io/scheme: internet-facing
+      alb.ingress.kubernetes.io/target-type: ip
+      alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
+      alb.ingress.kubernetes.io/backend-protocol: "HTTPS"
+      alb.ingress.kubernetes.io/healthcheck-protocol: "HTTPS"
+      alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
+      alb.ingress.kubernetes.io/certificate-arn: "arn:aws:acm:us-east-1:151743893450:certificate/8a4c6f72-4e99-4e01-bc6a-6567b36409de"
+      external-dns.alpha.kubernetes.io/hostname: "manager.kong.hbfs.io"
+      alb.ingress.kubernetes.io/tags: "konger=usrbinkat,eol=2021sept25"
+      alb.ingress.kubernetes.io/load-balancer-name: "controlplane-manager"
 
 portalapi:
   enabled: true
