--- a/kongee/dataplane.yml
+++ b/kongee/dataplane.yml
@@ -46,14 +46,15 @@ proxy:
     prometheus.io/port: "9542"
     prometheus.io/scrape: "true"
     service.beta.kubernetes.io/aws-load-balancer-proxy-protocol: "*"
-    service.beta.kubernetes.io/aws-load-balancer-name: "proxy"
+    service.beta.kubernetes.io/aws-load-balancer-name: "dataplane"
     service.beta.kubernetes.io/aws-load-balancer-subnets: "subnet-0a4c44c677c2ea74c,subnet-07579767f7d37f425"
     service.beta.kubernetes.io/aws-load-balancer-type: nlb
    #service.beta.kubernetes.io/aws-load-balancer-internal: "true"
     service.beta.kubernetes.io/aws-load-balancer-backend-protocol: tcp
     service.beta.kubernetes.io/aws-load-balancer-scheme: "internet-facing"
-    external-dns.alpha.kubernetes.io/hostname: proxy.kong.hbfs.io
+   #external-dns.alpha.kubernetes.io/hostname: proxy.kong.hbfs.io
     service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: "ip"
+    alb.ingress.kubernetes.io/load-balancer-name: "controlplane-api"
   http:
     enabled: false
     servicePort: 80
